--- a/ecommerce/common-database/pom.xml
+++ b/ecommerce/common-database/pom.xml
@@ -9,19 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-users</artifactId>
+    <artifactId>common-database</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>br.com.joaodanieljr</groupId>
-            <artifactId>common-kafka</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>br.com.joaodanieljr</groupId>
-            <artifactId>common-database</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.0.0</version>
         </dependency>
     </dependencies>
 
